--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<h1>C'est bon ça marche, youpi !</h1>
+
+    <h1>Maxence DELATTRE</h1>
+    <body>
+        <h2>CONTACT</h2>
+        <H2>SOCIAL</H2>
+    </body>
