--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
-
+<html>
     <h1>Maxence DELATTRE</h1>
     <body>
-        <h2>CONTACT</h2>
-        <H2>SOCIAL</H2>
+        <h2>FORMATION</h2>
+        <H2>EXPÉRIENCES PROFESSIONNELLES</H2>
+        <h2>VIE ASSOCIATIVE</h2>
+        <H2>COMPÉTENCES LINGUISTQUES ET INFORMATIQUES</H2>
     </body>
+</html>
+
+
