--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <h1>Maxence DELATTRE</h1>
     <body>
         <h2>FORMATION</h2>
+        <h3>2015 - 2019 ESSEC Business School (Cergy)</h3>
         <H2>EXPÉRIENCES PROFESSIONNELLES</H2>
         <h2>VIE ASSOCIATIVE</h2>
         <H2>COMPÉTENCES LINGUISTQUES ET INFORMATIQUES</H2>
