--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
     <h1>Maxence DELATTRE</h1>
     <body>
         <h2>FORMATION</h2>
-        <h3>2015 - 2019 ESSEC Business School (Cergy)</h3>
+        <h3>2015 - 2019 <strong>ESSEC Business School</strong> (Cergy)</h3>
+            <li>Master of Science in Management – Programme Grande Ecole</li>
+            <li>ESSEC Asia Pacific – Programme “Global Manager in Asia” (Singapour)</li>
+        <h3><strong>LYCÉE CARNOT</strong> (Dijon)</h3>
+            <li>Classe Préparatoire Économique et Commerciale – Voie Économique</li>
         <H2>EXPÉRIENCES PROFESSIONNELLES</H2>
         <h2>VIE ASSOCIATIVE</h2>
         <H2>COMPÉTENCES LINGUISTQUES ET INFORMATIQUES</H2>
